--- a/laboratorium 1/praca domowa/PawełGryglewiczLab1PracDom/PawełGryglewiczLab1PracDom/FormMainWindow.resx
+++ b/laboratorium 1/praca domowa/PawełGryglewiczLab1PracDom/PawełGryglewiczLab1PracDom/FormMainWindow.resx
@@ -333,4 +333,7 @@
         7c/B32xIORQT+jM+HkZ98Wd8aEDy/wDcFOmc6NZWQwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timerCounter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
